<resources>
    <string name="app_name">SocialNetwork</string>
    <string name="authorization_login">Login</string>
    <string name="authorization_password">Password</string>
    <string name="authorization_log_in">Log In</string>
    <string name="authorization_sing_up">Sing Up</string>
    <string name="authorization_forgot_password">Forgot password</string>

    <string name="tab_title_contact">Contact</string>
    <string name="tab_title_info">Info</string>
    <string name="tab_title_login">Login</string>

    <string name="tab_error_message">Please correct the errors</string>
    <string name="error_field_empty">Field can not be empty</string>
    <string name="error_field_max">Exceeded the maximum value field length</string>
    <string name="error_field_format">Wrong format</string>

    <string name="register_navigation_next">Next</string>
    <string name="register_navigation_create_account">Create account</string>
    <string name="registration_name">Name</string>
    <string name="registration_surname">Surname</string>
    <string name="registration_login">Login</string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Confirm password</string>
    <string name="registration_email">Email</string>
    <string name="registration_phone">Phone</string>
    <string name="registration_skype">Skype</string>
    <string name="registration_city">City</string>
    <string name="registration_sex_male">Male</string>
    <string name="registration_sex_female">Female</string>

    <string name="progress_wait">Please wait, loading more</string>
    <string name="progress_dialog_message">Publication post</string>

    <string name="activity_label_wall">Wall</string>
    <string name="activity_label_registration">Registration</string>
    <string name="activity_label_friends">Friends</string>
    <string name="activity_label_new_post">New Post</string>
    <string name="activity_label_profile">Profile</string>
    <string name="activity_label_settings">Settings</string>
    <string name="activity_label_groups">Groups</string>
    <string name="activity_label_persons">Search people</string>
    <string name="activity_label_search_groups">Search groups</string>

    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_wall">Wall</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_message">Message</string>
    <string name="nav_item_groups">Groups</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_logout">Logout</string>
    <string name="error_autorization">Bad username or password</string>
    <string name="post_item_remove">Remove</string>
    <string name="error_click_retry">An error has occurred! click here to retry</string>
    <string name="login_button_success">Success</string>
    <string name="login_button_error">Error</string>
    <string name="login_button_progress">Loading</string>
    <string name="post_upload_item">Upload post</string>
    <string name="post_clear_image_item">Clear picture</string>

    <string name="preference_app_info">app info</string>
    <string name="preference_build_date">build date</string>
    <string name="preference_build_date_title">Build date</string>
    <string name="preference_app_info_title">App info</string>
    <string name="preference_settings_notification">settings notification</string>
    <string name="preference_settings_notification_title">Settings notification</string>
    <string name="preference_version_name">version name</string>
    <string name="preference_build_number">build number</string>
    <string name="preference_version_name_title">Build version</string>
    <string name="preference_build_number_title">Build number</string>
    <string name="friend_search_item">Search persons</string>
    <string name="activity_label_notification_settings">Notification settings</string>
    <string name="activity_label_app_info">App info</string>
    <string name="preference_vibration">vibration</string>
    <string name="preference_vibration_title">Vibration</string>
    <string name="preference_sound">sound</string>
    <string name="preference_sound_title">Sound</string>
    <string name="preference_notification_title">Notification</string>
    <string name="preference_notification">notification</string>
    <string name="activity_label_group">Group</string>
    <string name="activity_label_friend">Friend</string>
    <string name="activity_label_messages">Messages</string>
    <string name="activity_label_chat">Chat</string>
    <string name="empty_recycler_view">Have not data. Please, add content</string>
    <string name="group_members">Members</string>
    <string name="Description">Description</string>
    <string name="fab_title_post">Create post</string>
    <string name="fab_title_message">Write message</string>
    <string name="remove_friend_item">Remove friend</string>
    <string name="remove_group_item">Remove group</string>
    <string name="chat_input_message">Input message</string>
    <string name="restore_password">Restore</string>
    <string name="restore_password_completed">Password restored, check mail</string>
    <string name="activity_label_restore">Restore password</string>
    <string name="login_welcome_part_one">Welcome</string>
    <string name="login_welcome_part_two">registration success</string>
    <string name="profile_city">City</string>
    <string name="profile_about">About</string>
    <string name="profile_skype">Skype</string>

</resources>
