<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile_24dp"
        android:title="@string/nav_item_profile"
    />

    <item
        android:id="@+id/nav_wall"
        android:icon="@drawable/ic_nav_wall_24dp"
        android:title="@string/nav_item_wall"
    />

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_nav_message_24dp"
        android:title="@string/nav_item_message"
    />

    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/ic_nav_friends_24dp"
        android:title="@string/nav_item_friends"
    />

    <item
        android:id="@+id/nav_groups"
        android:icon="@drawable/ic_nav_groups_24dp"
        android:title="@string/nav_item_groups"
    />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings_24dp"
        android:title="@string/nav_item_settings"
    />

    <group android:id="@+id/nav_authorization">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_item_logout"/>
    </group>

</menu>