<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:ignore="SmallSp">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:hint="@string/authorization_login"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/text_cursor"
            app:met_floatingLabel="highlight"
            app:met_iconLeft="@drawable/ic_user_name"
            app:met_iconPadding="16dp"
            app:met_primaryColor="@color/holo_orange_light"
        />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/authorization_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/text_cursor"
            app:met_floatingLabel="highlight"
            app:met_iconLeft="@drawable/ic_password"
            app:met_primaryColor="@color/holo_orange_light"
        />


        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/sing_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:minWidth="@dimen/login_button_min_width"
            android:text="@string/authorization_log_in"
            android:textColor="@android:color/white"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorError="@color/red_error"
            custom:pb_colorNormal="@color/normal"
            custom:pb_colorPressed="@color/press"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/login_button_success"
            custom:pb_textError="@string/login_button_error"
            custom:pb_textProgress="@string/login_button_progress"/>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/sing_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/post_padding_top"
            android:layout_marginTop="@dimen/post_padding_top"
            android:minWidth="@dimen/login_button_min_width"
            android:text="@string/authorization_sing_up"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@color/normal"
            custom:pb_colorPressed="@color/press"
        />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/post_image_margin_top"
            android:layout_marginTop="@dimen/post_image_margin_top"
            android:text="@string/authorization_forgot_password"
        />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/post_marging_start"
            android:layout_marginTop="@dimen/post_image_margin_top"
            android:text="@string/error_autorization"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
        />

    </LinearLayout>
</ScrollView>



